--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,23 @@
 Package: BadmintonGamePicker
-Title: An Amazing Shiny App
+Title: BadmintonGamePicker
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "firstname",
-           family = "lastname",
-           role = c("aut", "cre"),
-           email = "your@email.com")
-Description: What the package does (one paragraph).
-License: What license is it under?
+    person("Alison", "Telford", , "atelford7@gmail.com", role = c("aut", "cre"))
+Description: Generates a new game of badminton based on those persons waiting in the queue.
+License: MIT + file LICENSE
 Imports: 
     config,
     golem,
-    shiny
+    shiny,
+    shinydashboard,
+    shinyWidgets
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.1
+RoxygenNote: 7.3.2
+URL: https://github.com/alisontelford/BadmintonGamePicker.git
+BugReports: https://github.com/alisontelford/BadmintonGamePicker.git/issues
+Suggests: 
+    spelling,
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
+Language: en-US
