--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,8 @@ Imports:
     golem,
     shiny,
     shinydashboard,
-    shinyWidgets
+    shinyWidgets,
+    stringr
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.2
